# mmdict

./: .gitignore  LICENSE  README.md  main.yml  setup.cfg
.github/workflows/: pypi-publish.yml
script/: test.sh.ps1
src/mmdict/: __init__.py  caseless.py  errors.py  multidict.py
tests/: test_alias.py  test_basic.py  test_caseless.py
