[metadata]
name = mmdict
version = 0.0.1
description = A dictionary-like class that allows keys to have multiple names.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
